dice shuffle added

--- a/LudoUI.html
+++ b/LudoUI.html
@@ -6,6 +6,9 @@
     <script src="LudoEngine.js"></script>
   </head>
   <body>
-    <div id="ludo-board"></div>
+    <div class="game-body">
+      <div class="ludo-board"></div>
+      <div id="dice" onclick="shuffleDice()"></div>
+    </div>
   </body>
 </html>
