pawns class for reuse

--- a/LudoUI.html
+++ b/LudoUI.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="style.css" />
     <script src="LudoEngine.js"></script>
   </head>
-  <body onload="resetButtons()">
+  <body onload="loadBoard()">
     <div class="game-field">
       <h1 style="color: brown;">Ludo</h1>
       <div class="ludo-board" ></div>
