--- a/LudoUI.html
+++ b/LudoUI.html
@@ -17,28 +17,28 @@
           </div>
           <label for="player">Click on the dice to shuffle</label>
         </div>
-        <div id="dice" name="dice-icon" onclick="shuffleDice()"></div>
+        <div id="dice" onclick="rollDice()"></div>
       </div>
 
-      <div class="redButton" id="red1"></div>
-      <div class="redButton" id="red2"></div>
-      <div class="redButton" id="red3"></div>
-      <div class="redButton" id="red4"></div>
+      <div class="redButton" id="red1" onclick="moveNow(red1)"></div>
+      <div class="redButton" id="red2" onclick="moveNow(red2)"></div>
+      <div class="redButton" id="red3" onclick="moveNow(red3)"></div>
+      <div class="redButton" id="red4" onclick="moveNow(red4)"></div>
 
-      <div class="greenButton" id="green1"></div>
-      <div class="greenButton" id="green2"></div>
-      <div class="greenButton" id="green3"></div>
-      <div class="greenButton" id="green4"></div>
+      <div class="greenButton" id="green1" onclick="moveNow(green1)"></div>
+      <div class="greenButton" id="green2" onclick="moveNow(green2)"></div>
+      <div class="greenButton" id="green3" onclick="moveNow(green3)"></div>
+      <div class="greenButton" id="green4" onclick="moveNow(green4)"></div>
 
-      <div class="blueButton" id="blue1"></div>
-      <div class="blueButton" id="blue2"></div>
-      <div class="blueButton" id="blue3"></div>
-      <div class="blueButton" id="blue4"></div>
+      <div class="blueButton" id="blue1" onclick="moveNow(blue1)"></div>
+      <div class="blueButton" id="blue2" onclick="moveNow(blue2)"></div>
+      <div class="blueButton" id="blue3" onclick="moveNow(blue3)"></div>
+      <div class="blueButton" id="blue4" onclick="moveNow(blue4)"></div>
 
-      <div class="yellowButton" id="yellow1"></div>
-      <div class="yellowButton" id="yellow2"></div>
-      <div class="yellowButton" id="yellow3"></div>
-      <div class="yellowButton" id="yellow4"></div>
+      <div class="yellowButton" id="yellow1" onclick="moveNow(yellow1)"></div>
+      <div class="yellowButton" id="yellow2" onclick="moveNow(yellow2)"></div>
+      <div class="yellowButton" id="yellow3" onclick="moveNow(yellow3)"></div>
+      <div class="yellowButton" id="yellow4" onclick="moveNow(yellow4)"></div>
     </div>
   </body>
 </html>
