--- a/LudoUI.html
+++ b/LudoUI.html
@@ -20,25 +20,25 @@
         <div id="dice" onclick="rollDice()"></div>
       </div>
 
-      <div class="redButton" id="red1" onclick="moveNow(red1)"></div>
-      <div class="redButton" id="red2" onclick="moveNow(red2)"></div>
-      <div class="redButton" id="red3" onclick="moveNow(red3)"></div>
-      <div class="redButton" id="red4" onclick="moveNow(red4)"></div>
+      <div class="redButton" id="red1" onclick="movePawn(red1)"></div>
+      <div class="redButton" id="red2" onclick="movePawn(red2)"></div>
+      <div class="redButton" id="red3" onclick="movePawn(red3)"></div>
+      <div class="redButton" id="red4" onclick="movePawn(red4)"></div>
 
-      <div class="greenButton" id="green1" onclick="moveNow(green1)"></div>
-      <div class="greenButton" id="green2" onclick="moveNow(green2)"></div>
-      <div class="greenButton" id="green3" onclick="moveNow(green3)"></div>
-      <div class="greenButton" id="green4" onclick="moveNow(green4)"></div>
+      <div class="greenButton" id="green1" onclick="movePawn(green1)"></div>
+      <div class="greenButton" id="green2" onclick="movePawn(green2)"></div>
+      <div class="greenButton" id="green3" onclick="movePawn(green3)"></div>
+      <div class="greenButton" id="green4" onclick="movePawn(green4)"></div>
 
-      <div class="blueButton" id="blue1" onclick="moveNow(blue1)"></div>
-      <div class="blueButton" id="blue2" onclick="moveNow(blue2)"></div>
-      <div class="blueButton" id="blue3" onclick="moveNow(blue3)"></div>
-      <div class="blueButton" id="blue4" onclick="moveNow(blue4)"></div>
+      <div class="blueButton" id="blue1" onclick="movePawn(blue1)"></div>
+      <div class="blueButton" id="blue2" onclick="movePawn(blue2)"></div>
+      <div class="blueButton" id="blue3" onclick="movePawn(blue3)"></div>
+      <div class="blueButton" id="blue4" onclick="movePawn(blue4)"></div>
 
-      <div class="yellowButton" id="yellow1" onclick="moveNow(yellow1)"></div>
-      <div class="yellowButton" id="yellow2" onclick="moveNow(yellow2)"></div>
-      <div class="yellowButton" id="yellow3" onclick="moveNow(yellow3)"></div>
-      <div class="yellowButton" id="yellow4" onclick="moveNow(yellow4)"></div>
+      <div class="yellowButton" id="yellow1" onclick="movePawn(yellow1)"></div>
+      <div class="yellowButton" id="yellow2" onclick="movePawn(yellow2)"></div>
+      <div class="yellowButton" id="yellow3" onclick="movePawn(yellow3)"></div>
+      <div class="yellowButton" id="yellow4" onclick="movePawn(yellow4)"></div>
     </div>
   </body>
 </html>
